--- a/TaxiKit.Core/TaxiKit.Core.TestKit/app.config
+++ b/TaxiKit.Core/TaxiKit.Core.TestKit/app.config
@@ -22,6 +22,10 @@
         <assemblyIdentity name="xunit.assert" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.1.0.3109" newVersion="2.1.0.3109" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="xunit.core" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.3109" newVersion="2.1.0.3109" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup></configuration>
