--- a/TaxiKit.Core/TaxiKit.Core.Tests/TaxiKit.Core.Tests.csproj
+++ b/TaxiKit.Core/TaxiKit.Core.Tests/TaxiKit.Core.Tests.csproj
@@ -49,6 +49,10 @@
       <HintPath>..\..\packages\Akka.DI.Core.1.0.4\lib\net45\Akka.DI.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Akka.DI.TestKit">
+      <HintPath>..\..\packages\Akka.DI.TestKit.1.0.4\lib\net45\Akka.DI.TestKit.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Akka.Logger.Serilog, Version=1.0.4.12, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Akka.Logger.Serilog.1.0.4\lib\net45\Akka.Logger.Serilog.dll</HintPath>
