--- a/TaxiKit.Core/TaxiKit.Core/TaxiKit.Core.csproj
+++ b/TaxiKit.Core/TaxiKit.Core/TaxiKit.Core.csproj
@@ -129,10 +129,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActorSystemUtils.cs" />
     <Compile Include="Cluster\ClusterLoggingActor.cs" />
     <Compile Include="Guarantee\GuaranteeEnvelope.cs" />
     <Compile Include="Guarantee\GuaranteeRecieverActor.cs" />
     <Compile Include="Guarantee\GuaranteeSenderActor.cs" />
+    <Compile Include="NameSpaceActor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DateTimeWrapper.cs" />
   </ItemGroup>
@@ -140,9 +142,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Directives\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
