--- a/TaxiKit.Core/TaxiKit.Core.TestKit/TaxiKit.Core.TestKit.csproj
+++ b/TaxiKit.Core/TaxiKit.Core.TestKit/TaxiKit.Core.TestKit.csproj
@@ -159,6 +159,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Configuration.resx</DependentUpon>
     </Compile>
+    <Compile Include="HackedBaseActorTest.cs" />
     <Compile Include="IMessageWithPath.cs" />
     <Compile Include="Moq\RedisConnectionMoq.cs" />
     <Compile Include="Moq\RedisMoq.cs" />
@@ -168,6 +169,7 @@
     <Compile Include="TestMessage.cs" />
     <Compile Include="TestWithSerilog.cs" />
     <Compile Include="TimeMachineScheduler.cs" />
+    <Compile Include="Installer.cs" />
     <Compile Include="XunitOutputWriter.cs" />
   </ItemGroup>
   <ItemGroup>
