--- a/TaxiKit.Core/TaxiKit.Core/TaxiKit.Core.csproj
+++ b/TaxiKit.Core/TaxiKit.Core/TaxiKit.Core.csproj
@@ -105,6 +105,7 @@
       <HintPath>..\..\packages\Microsoft.Bcl.Immutable.1.0.34\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Reactive.Core, Version=2.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -130,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActorSystemUtils.cs" />
+    <Compile Include="BaseInstaller.cs" />
     <Compile Include="Cluster\ClusterLoggingActor.cs" />
     <Compile Include="Guarantee\GuaranteeEnvelope.cs" />
     <Compile Include="Guarantee\GuaranteeRecieverActor.cs" />
@@ -137,6 +139,7 @@
     <Compile Include="NameSpaceActor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DateTimeWrapper.cs" />
+    <Compile Include="Installer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
