--- a/TaxiKit.Core/TaxiKit.Core.Service/packages.config
+++ b/TaxiKit.Core/TaxiKit.Core.Service/packages.config
@@ -12,6 +12,7 @@
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
   <package id="Helios" version="1.4.1" targetFramework="net452" />
+  <package id="JetBrains.Annotations" version="9.2.0" targetFramework="net452" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="Rx-Core" version="2.3.0-beta2" targetFramework="net452" />
