--- a/ClusterKit.Core/ClusterKit.Core.TestKit/ClusterKit.Core.TestKit.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.TestKit/ClusterKit.Core.TestKit.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Moq\RedisMoq.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestActorForwarder.cs" />
+    <Compile Include="TestConfigurator.cs" />
     <Compile Include="TestMailbox.cs" />
     <Compile Include="TestMessage.cs" />
     <Compile Include="TestWithSerilog.cs" />
