--- a/ClusterKit.Web/ClusterKit.Web.NginxConfigurator/ClusterKit.Web.NginxConfigurator.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.NginxConfigurator/ClusterKit.Web.NginxConfigurator.csproj
@@ -118,6 +118,7 @@
       <DependentUpon>Configuration.resx</DependentUpon>
     </Compile>
     <Compile Include="Installer.cs" />
+    <Compile Include="NginxConfiguratorActor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -136,13 +137,13 @@
       <Project>{ba97beed-b078-499d-8c00-6a3d4a0635f2}</Project>
       <Name>ClusterKit.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Web.Client\ClusterKit.Web.Client.csproj">
+      <Project>{8e543ea4-65de-475f-8045-c094cde58e29}</Project>
+      <Name>ClusterKit.Web.Client</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Web.Service\ClusterKit.Web.Service.csproj">
       <Project>{dfec6c9b-ce04-4147-ab91-cb5b1c524049}</Project>
       <Name>ClusterKit.Web.Service</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ClusterKit.Web\ClusterKit.Web.csproj">
-      <Project>{477b201a-a30c-4360-b56a-6f61c049bb04}</Project>
-      <Name>ClusterKit.Web</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
